# gol

./: .gitignore  CMakeLists.txt  README.md  gol_sfml.pro  main.cpp  readme.md  render_45.frag  spawn.frag  update.frag  update_45.frag  vcpkg.json
shaders/: render.frag  update.frag  update.vert  update_45.vert
